added org config and babel helpers

--- a/custom-emacs/init.org
+++ b/custom-emacs/init.org
@@ -357,4 +357,240 @@ Some requirements:
 #+end_src
 
 ** Org Everything
+
 - Add
+*** Org
+#+begin_src emacs-lisp
+(defun efs/org-mode-setup ()
+  (org-indent-mode)
+  (variable-pitch-mode 1)
+  (visual-line-mode 1))
+
+(use-package org
+  :hook (org-mode . efs/org-mode-setup)
+  :config
+  (setq org-ellipsis " ▾")
+
+  (setq org-agenda-start-with-log-mode t)
+  (setq org-log-done 'time)
+  (setq org-log-into-drawer t)
+
+  (setq org-agenda-files
+        '("~/Projects/Code/emacs-from-scratch/OrgFiles/Tasks.org"
+          "~/Projects/Code/emacs-from-scratch/OrgFiles/Habits.org"
+          "~/Projects/Code/emacs-from-scratch/OrgFiles/Birthdays.org"))
+
+  (require 'org-habit)
+  (add-to-list 'org-modules 'org-habit)
+  (setq org-habit-graph-column 60)
+
+  (setq org-todo-keywords
+    '((sequence "TODO(t)" "NEXT(n)" "|" "DONE(d!)")
+      (sequence "BACKLOG(b)" "PLAN(p)" "READY(r)" "ACTIVE(a)" "REVIEW(v)" "WAIT(w@/!)" "HOLD(h)" "|" "COMPLETED(c)" "CANC(k@)")))
+
+  (setq org-refile-targets
+    '(("Archive.org" :maxlevel . 1)
+      ("Tasks.org" :maxlevel . 1)))
+
+  ;; Save Org buffers after refiling!
+  (advice-add 'org-refile :after 'org-save-all-org-buffers)
+
+  (setq org-tag-alist
+    '((:startgroup)
+       ; Put mutually exclusive tags here
+       (:endgroup)
+       ("@errand" . ?E)
+       ("@home" . ?H)
+       ("@work" . ?W)
+       ("agenda" . ?a)
+       ("planning" . ?p)
+       ("publish" . ?P)
+       ("batch" . ?b)
+       ("note" . ?n)
+       ("idea" . ?i)))
+
+  ;; Configure custom agenda views
+  (setq org-agenda-custom-commands
+   '(("d" "Dashboard"
+     ((agenda "" ((org-deadline-warning-days 7)))
+      (todo "NEXT"
+        ((org-agenda-overriding-header "Next Tasks")))
+      (tags-todo "agenda/ACTIVE" ((org-agenda-overriding-header "Active Projects")))))
+
+    ("n" "Next Tasks"
+     ((todo "NEXT"
+        ((org-agenda-overriding-header "Next Tasks")))))
+
+    ("W" "Work Tasks" tags-todo "+work-email")
+
+    ;; Low-effort next actions
+    ("e" tags-todo "+TODO=\"NEXT\"+Effort<15&+Effort>0"
+     ((org-agenda-overriding-header "Low Effort Tasks")
+      (org-agenda-max-todos 20)
+      (org-agenda-files org-agenda-files)))
+
+    ("w" "Workflow Status"
+     ((todo "WAIT"
+            ((org-agenda-overriding-header "Waiting on External")
+             (org-agenda-files org-agenda-files)))
+      (todo "REVIEW"
+            ((org-agenda-overriding-header "In Review")
+             (org-agenda-files org-agenda-files)))
+      (todo "PLAN"
+            ((org-agenda-overriding-header "In Planning")
+             (org-agenda-todo-list-sublevels nil)
+             (org-agenda-files org-agenda-files)))
+      (todo "BACKLOG"
+            ((org-agenda-overriding-header "Project Backlog")
+             (org-agenda-todo-list-sublevels nil)
+             (org-agenda-files org-agenda-files)))
+      (todo "READY"
+            ((org-agenda-overriding-header "Ready for Work")
+             (org-agenda-files org-agenda-files)))
+      (todo "ACTIVE"
+            ((org-agenda-overriding-header "Active Projects")
+             (org-agenda-files org-agenda-files)))
+      (todo "COMPLETED"
+            ((org-agenda-overriding-header "Completed Projects")
+             (org-agenda-files org-agenda-files)))
+      (todo "CANC"
+            ((org-agenda-overriding-header "Cancelled Projects")
+             (org-agenda-files org-agenda-files)))))))
+
+  (setq org-capture-templates
+    `(("t" "Tasks / Projects")
+      ("tt" "Task" entry (file+olp "~/Projects/Code/emacs-from-scratch/OrgFiles/Tasks.org" "Inbox")
+           "* TODO %?\n  %U\n  %a\n  %i" :empty-lines 1)
+
+      ("j" "Journal Entries")
+      ("jj" "Journal" entry
+           (file+olp+datetree "~/Projects/Code/emacs-from-scratch/OrgFiles/Journal.org")
+           "\n* %<%I:%M %p> - Journal :journal:\n\n%?\n\n"
+           ;; ,(dw/read-file-as-string "~/Notes/Templates/Daily.org")
+           :clock-in :clock-resume
+           :empty-lines 1)
+      ("jm" "Meeting" entry
+           (file+olp+datetree "~/Projects/Code/emacs-from-scratch/OrgFiles/Journal.org")
+           "* %<%I:%M %p> - %a :meetings:\n\n%?\n\n"
+           :clock-in :clock-resume
+           :empty-lines 1)
+
+      ("w" "Workflows")
+      ("we" "Checking Email" entry (file+olp+datetree "~/Projects/Code/emacs-from-scratch/OrgFiles/Journal.org")
+           "* Checking Email :email:\n\n%?" :clock-in :clock-resume :empty-lines 1)
+
+      ("m" "Metrics Capture")
+      ("mw" "Weight" table-line (file+headline "~/Projects/Code/emacs-from-scratch/OrgFiles/Metrics.org" "Weight")
+       "| %U | %^{Weight} | %^{Notes} |" :kill-buffer t)))
+
+  (define-key global-map (kbd "C-c j")
+    (lambda () (interactive) (org-capture nil "jj")))
+
+  (efs/org-font-setup))
+
+(use-package org-bullets
+  :after org
+  :hook (org-mode . org-bullets-mode)
+  :custom
+  (org-bullets-bullet-list '("◉" "○" "●" "○" "●" "○" "●")))
+
+(defun efs/org-mode-visual-fill ()
+  (setq visual-fill-column-width 100
+        visual-fill-column-center-text t)
+  (visual-fill-column-mode 1))
+
+(use-package visual-fill-column
+  :hook (org-mode . efs/org-mode-visual-fill))
+
+(org-babel-do-load-languages
+  'org-babel-load-languages
+  '((emacs-lisp . t)
+    (C . t)
+    (python . t)))
+
+#+end_src
+
+*** Babel helpers
+#+begin_src emacs-lisp
+(defun replace-string-in-current-buffer (from-string to-string)
+  "Replace FROM-STRING with TO-STRING in the current buffer."
+  (save-excursion
+    (goto-char (point-min))
+    (while (search-forward from-string nil t)
+      (replace-match to-string nil t))))
+
+(defun get-number-of-lines ()
+  "Retrieve the current number of lines"
+  (interactive)
+  (count-lines (point-min) (point-max)))
+
+(defun delete-hidden-text ()
+  "Remove all lines from top of the buffer that would be revealed by a call to `widen'"
+  (interactive)
+  (-let [src-lines (get-number-of-lines)]
+    (widen)
+    (setq-local widen-number-of-lines (get-number-of-lines))
+    (goto-char (point-min))
+    (kill-line (- widen-number-of-lines src-lines))))
+
+(defun string-contains-only-newlines-p (str)
+  "Check if the string contains only newline characters."
+  (unless (or (string-empty-p str)
+              (with-temp-buffer
+                (insert str)
+                (goto-char (point-min))
+                (re-search-forward "[^[:space:]\n]" nil t)))
+    t))
+
+(define-advice org-edit-src-exit
+    (:before (&rest _args))
+  (when (buffer-narrowed-p)
+    (delete-hidden-text)))
+
+(define-advice org-edit-src-save
+    (:before (&rest _args))
+  (when (buffer-narrowed-p)
+    (delete-hidden-text)))
+
+(defun org-babel-tangle-block ()
+  "Tangle a single file under cursor"
+  (interactive)
+  (let ((current-prefix-arg '(4)))
+    (call-interactively 'org-babel-tangle)))
+
+(defun org-babel-edit-prep:c (babel-info)
+  (setq-local buffer-file-name (->> babel-info caddr (alist-get :tangle)))
+  (lsp))
+
+(defun org-babel-edit-prep:python (babel-info)
+  (setq-local buffer-file-name (->> babel-info caddr (alist-get :tangle)))
+  (lsp))
+
+;; Make sure rustic gets activated in the org-src block and add the original file's source code.
+;; only triggers on C-c C-c
+(defun org-babel-edit-prep:cpp (babel-info)
+  ;; get source code in org source block
+  (setq-local src-code (nth 1 babel-info))
+  ;; get filename
+  ;; TODO: needs edge case when tangle = yes
+  (setq-local buffer-file-name (->> babel-info caddr (alist-get :tangle)))
+  (message (format "%s" src-code))
+  ;; go to first point and insert file content
+  (goto-char (point-min))
+  (insert-file-contents buffer-file-name)
+  ;; replace source code if exists and only if not empty or newlines
+  (unless (string-contains-only-newlines-p (format "%s" src-code))
+    (replace-string-in-current-buffer src-code ""))
+  ;; count current lines
+  (setq-local n-lines (get-number-of-lines))
+  ;; go to the end of the lines
+  (goto-line n-lines)
+  ;; insert the source block
+  (insert src-code)
+  ;; jump back to the prior position
+  (goto-line n-lines)
+  ;; narrow the region without restriction
+  (narrow-to-region (point) (point-max))
+  (without-restriction)) ;; major mode is automatiically enabled by org-edit-src-code
+
+#+end_src
